--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,3 +10,18 @@ body {
     text-wrap: balance;
   }
 }
+
+
+.loader {
+  border: 6px solid #4A5567; /* Light grey */
+  border-top: 6px solid #3662E3; /* Blue */
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
